--- a/css/login-signup.css
+++ b/css/login-signup.css
@@ -23,9 +23,9 @@ main form {
     gap: 0.2rem;
     input {
       border: 1px solid black;
-      border-radius: 5px;
-
-      padding: 0.3rem;
+      border-radius: 0.5rem;
+      font-size: 1rem;
+      padding: 0.5rem;
     }
   }
   button {
@@ -49,7 +49,7 @@ main form {
     outline: solid 2px var(--second-accent-color);
   }
   .reminder {
-    font-size: 0.85rem;
+    font-size: 0.9rem;
     a {
       text-decoration: none;
     }
