--- a/css/hero.css
+++ b/css/hero.css
@@ -7,7 +7,7 @@
   background-size: cover;
   background-position: center;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   padding: 20px;
   color: white;
@@ -15,7 +15,7 @@
 
 .hero-content {
   max-width: 400px;
-  margin-right: 10%;
+  width: 100%;
 }
 
 .hero h1 {
@@ -30,9 +30,16 @@
 }
 
 .hero-buttons {
+  width: 100%;
   display: flex;
-  gap: 15px;
+  flex-direction: column;
+  gap: 1rem;
+  a{
+    min-width: 12rem;
+    justify-content: center;
+  }
 }
+
 
 .btn {
   padding: 10px 20px;
@@ -52,4 +59,21 @@
   background-color: transparent;
   color: var(--main-color);
   border: 2px solid var(--main-color);
+}
+
+@media (min-width: 480px){
+  .hero-buttons{
+    flex-direction: row;
+   
+  }
+}
+
+
+@media (min-width: 756px){
+.hero-content {
+  margin-right: 10%;
+}
+.hero{
+  justify-content: flex-end;
+}
 }
