--- a/css/cards.css
+++ b/css/cards.css
@@ -45,6 +45,10 @@ body main#discover {
     flex-direction: column;
     gap: 1rem;
   }
+
+  .author-name{
+    font-size: 1rem;
+  }
   
   /* Card Styles */
   .card {
@@ -57,6 +61,10 @@ body main#discover {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     position: relative;
     margin-top: 1rem;
+  }
+
+  .card:focus-within{
+    outline: 2px solid var(--accent-color);
   }
   
   .card:hover {
@@ -118,6 +126,10 @@ body main#discover {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     position: relative;
     margin-top: 1rem;
+  }
+
+  .card-author:focus-within{
+    outline: 2px solid var(--accent-color);
   }
 
   .card-author a {
