--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-
+@font-face {
+  font-family: 'Inter';
+  src: url('/font/inter.woff2') format('woff2');
+  font-weight: 300 700;
+  font-style: normal;
+  font-display: swap; 
+}
 /* Base styles */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Inter;
+  font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 :root {
@@ -154,11 +159,16 @@ header img {
   padding-inline: 1rem;
 }
 
+#desktop_search_field::placeholder{
+  color: var(--main-color);
+}
+
 #mobile_search_form {
   display: flex;
   width: 100%;
   margin: 2rem 0;
 }
+
 
 /* Burger Menu */
 .burger-menu {
@@ -392,6 +402,10 @@ body#home_page #desktop_search_form input {
 
 .header-buttons #profile_btn{
   padding: 0;
+}
+
+body:not(#home_page) #desktop_search_field::placeholder{
+  color: var(--secondary-color);
 }
 }
 
