--- a/css/book.css
+++ b/css/book.css
@@ -241,6 +241,13 @@ button#loan_book.adm_acc {
   text-overflow: ellipsis;
 }
 
+.loan-info {
+        margin-top: 0.5rem;
+        margin-bottom: 0.8rem;
+        font-size: 0.8rem;
+        color: var(--main-grey);
+      }
+
 /* Responsive Design */
 @media (min-width: 640px) {
   .recommendation-card {
@@ -255,7 +262,7 @@ button#loan_book.adm_acc {
       height: 100%;
       button#loan_book {
         margin-top: auto;
-        margin-bottom: 0.5rem;
+        max-width: max-content;
       }
       .details .author {
         font-size: 1.1rem;
@@ -264,11 +271,7 @@ button#loan_book.adm_acc {
       .details .year {
         font-size: 1rem;
       }
-      .loan-info {
-        margin-bottom: 0.8rem;
-        font-size: 0.8rem;
-        color: var(--main-grey);
-      }
+      
     }
   }
 }
