--- a/css/hero.css
+++ b/css/hero.css
@@ -3,7 +3,7 @@
 .hero {
   position: relative;
   height: 100vh;
-  background-image: url(/img/hero-image-small.webp);
+  background-image: url(bg-img/hero-image-small.webp);
   background-size: cover;
   background-position: center;
   display: flex;
@@ -37,6 +37,6 @@
 }
 .hero{
   justify-content: flex-end;
-  background-image: url(/img/hero-image-large.webp);
+  background-image: url(bg-img/hero-image-large.webp);
 }
 }
