--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Inter';
-  src: url('/font/inter.woff2') format('woff2');
+  src: url('font/inter.woff2') format('woff2');
   font-weight: 300 700;
   font-style: normal;
   font-display: swap; 
