--- a/css/profile.css
+++ b/css/profile.css
@@ -138,7 +138,7 @@ dialog {
 }
 
 dialog::backdrop {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--back-ground);
 }
 
 .modal-content {
