--- a/css/main.css
+++ b/css/main.css
@@ -429,6 +429,7 @@ body:not(#home_page) #desktop_search_field::placeholder{
   background: none;
   cursor: pointer;
   transition: transform 0.2s ease;
+  font-size: 1rem;
 }
 
 .back-button:hover {
@@ -436,7 +437,7 @@ body:not(#home_page) #desktop_search_field::placeholder{
 }
 
 .back-button svg {
-  width: 18px;
-  height: 18px;
+  width: 24px;
+  height: 24px;
   fill: currentColor;
 }
